# quiet-call-ai-backend

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: audio.py  config.py  health.py  logging.py  middleware.py  rate_limit.py  schema.py  utils.py  ws_manager.py
app/integrations/: call_manager.py  conversation.py  prompt_builder.py  realtime_bridge.py  realtime_call_manager.py  twilio_adapter.py
app/modules/admin/: exceptions.py  service.py  views.py
app/modules/audit/: models.py  repository.py  schema.py  service.py  views.py
app/modules/auth/: auth_handler.py  schema.py  service.py  views.py
app/modules/calls/: models.py  pricing.py  repository.py  schema.py  service.py  views.py  ws.py
app/modules/feedback/: schema.py  views.py
app/modules/files/: models.py  repository.py  service.py  views.py
app/modules/notifications/: constants.py  email_service.py  post_call.py  translations.py  webhook_dispatcher.py
app/modules/scheduler/: service.py  task_executor.py
app/modules/tasks/: exceptions.py  repository.py  schema.py  service.py  views.py
app/modules/templates/: repository.py  service.py  views.py
app/modules/users/: middleware.py  models.py  schema.py  service.py  views.py
app/modules/webhooks/: realtime_ws.py  views.py
app/scripts/: seed_demo.py  seed_templates.py
migrations/: env.py
migrations/versions/: 34fc389ea6e5_add_token_usage_columns_to_call_session.py  3f88cf860e4c_add_webhook_url_to_user.py  42f1228c7ba6_widen_token_counters_to_bigint_and_.py  706b6921ee97_add_is_active_to_user.py  9857314f4bf8_add_assistant_name_to_user.py  a2d650c33ef2_add_audit_log_table.py
tests/integration/: test_admin.py  test_audit.py  test_calls.py  test_tasks.py  test_templates.py  test_webhooks.py
tests/unit/core/: test_rate_limit.py  test_ws_manager.py
tests/unit/integrations/: test_call_manager.py  test_prompt_builder.py  test_realtime_bridge.py  test_realtime_call_manager.py  test_twilio_adapter.py
tests/unit/modules/admin/: test_service.py
tests/unit/modules/audit/: test_repository.py  test_service.py
tests/unit/modules/auth/: test_jwt_handler.py  test_service.py
tests/unit/modules/calls/: test_repository.py  test_ws.py
tests/unit/modules/files/: test_repository.py  test_service.py
tests/unit/modules/notifications/: test_email_service.py  test_post_call.py  test_webhook_dispatcher.py
tests/unit/modules/scheduler/: test_service.py  test_task_executor.py
tests/unit/modules/tasks/: test_repository.py  test_schema.py  test_service.py
tests/unit/modules/templates/: test_repository.py  test_service.py
tests/unit/modules/users/: test_middleware.py  test_schema.py  test_service.py
tests/unit/modules/webhooks/: test_realtime_ws.py
