[project]
name = "quiet-call-ai"
version = "0.1.0"
description = ""
authors = [
    { name = "ana.gojinevschi", email = "ana.gojinevschi@ebs-integrator.com" }
]
readme = "README.md"
requires-python = ">=3.12, <=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "alembic (>=1.18.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "twilio (>=9.10.3,<10.0.0)",
    "openai (>=2.28.0,<3.0.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "edge-tts (>=7.2.7,<8.0.0)",
    "websockets (>=16.0,<17.0)"
]

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
exclude = ["logs*", "migrations*"]

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "types-aiofiles (>=25.1.0.20251011,<26.0.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing:skip-covered"

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = ["migrations"]
lint.select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "ASYNC", # flake8-async
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "BLE", # flake8-blind-except
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "FIX", # flake8 - fix me
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN", # typing
]

lint.ignore = [
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "ASYNC230",
    "E722",
    "B024", # Abstract base class with no abstract methods (may indicate incorrect ABC usage)
    "B904", # Within `except` blocks, use `raise ... from err` to preserve exception context
    "BLE001", # Do not catch blind exceptions (e.g., `except Exception:`) without handling specific types
    "F841", # Local variable assigned but never used
    "ISC001", # Conflicting implicit string concatenation (disabled to avoid unexpected behavior with `ruff format`)]
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
